src/XAGL/XAGLParser.py
# Generated from XAGLParser.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class XAGLParser ( Parser ):

    grammarFileName = "XAGLParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'{'", "'}'", "'['", "']'", 
                     "':'", "'='", "';'", "','", "'..'", "'.'", "'::'", 
                     "'Integer'", "'Number'", "'String'", "'Point'", "'Vector'", 
                     "'Time'", "'Boolean'", "'View'", "'Line'", "'Rectangle'", 
                     "'Ellipse'", "'Arc'", "'ArcChord'", "'PieSlice'", "'Text'", 
                     "'Dot'", "'PolyLine'", "'Spline'", "'Polygon'", "'Blob'", 
                     "'Model'", "'Enum'", "'Array'", "'Script'", "'with'", 
                     "'at'", "'print'", "'refresh'", "'close'", "'mouse'", 
                     "'click'", "'wait'", "'deepcopy'", "'input'", "'load'", 
                     "'play'", "'for'", "'while'", "'repeat'", "'until'", 
                     "'if'", "'else'", "'in'", "'do'", "'after'", "'ms'", 
                     "'s'", "'move'", "'rotate'", "'by'", "'to'", "'action'", 
                     "'on'", "'+'", "'-'", "'*'", "'/'", "'>'", "'<'", "'>='", 
                     "'<='", "'=='", "'!='", "'and'", "'or'", "'not'" ]

    symbolicNames = [ "<INVALID>", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
                      "LBRACK", "RBRACK", "COLON", "EQUAL", "SEMI", "COMMA", 
                      "TWODOTS", "DOT", "DOUBLECOLON", "INTEGER", "NUMBER", 
                      "STRING_", "POINT", "VECTOR", "TIME", "BOOLEAN_", 
                      "VIEW", "LINE", "RECTANGLE", "ELLIPSE", "ARC", "ARCHORD", 
                      "PIESLICE", "TEXT", "DOTTYPE", "POLYLINE", "SPLINE", 
                      "POLYGON", "BLOB", "Model", "Enum", "ARRAY", "SCRIPT", 
                      "WITH", "AT", "PRINT", "REFRESH", "CLOSE", "MOUSE", 
                      "CLICK", "WAIT", "DEEPCOPY", "INPUT", "LOAD", "PLAY", 
                      "FOR", "WHILE", "REPEAT", "UNTIL", "IF", "ELSE", "IN", 
                      "DO", "AFTER", "MS", "S", "MOVE", "ROTATE", "BY", 
                      "TO", "ACTION", "ON", "PLUS", "MINUS", "MUL", "DIV", 
                      "GT", "LT", "GTE", "LTE", "EQ", "NEQ", "AND", "OR", 
                      "NOT", "BOOLEAN", "ID", "NAME", "INT", "FLOAT", "STRING", 
                      "LINE_COMMENT", "COMMENT", "WS", "ERROR" ]

    RULE_program = 0
    RULE_stat = 1
    RULE_instantiation = 2
    RULE_simpleStatement = 3
    RULE_propertiesAssignment = 4
    RULE_longAssignment = 5
    RULE_assignment = 6
    RULE_expression = 7
    RULE_command = 8
    RULE_forStatement = 9
    RULE_number_range = 10
    RULE_whileStatement = 11
    RULE_repeatStatement = 12
    RULE_withStatement = 13
    RULE_ifStatement = 14
    RULE_elseStatement = 15
    RULE_typeID = 16
    RULE_identifier = 17

    ruleNames =  [ "program", "stat", "instantiation", "simpleStatement", 
                   "propertiesAssignment", "longAssignment", "assignment", 
                   "expression", "command", "forStatement", "number_range", 
                   "whileStatement", "repeatStatement", "withStatement", 
                   "ifStatement", "elseStatement", "typeID", "identifier" ]

    EOF = Token.EOF
    LPAREN=1
    RPAREN=2
    LBRACE=3
    RBRACE=4
    LBRACK=5
    RBRACK=6
    COLON=7
    EQUAL=8
    SEMI=9
    COMMA=10
    TWODOTS=11
    DOT=12
    DOUBLECOLON=13
    INTEGER=14
    NUMBER=15
    STRING_=16
    POINT=17
    VECTOR=18
    TIME=19
    BOOLEAN_=20
    VIEW=21
    LINE=22
    RECTANGLE=23
    ELLIPSE=24
    ARC=25
    ARCHORD=26
    PIESLICE=27
    TEXT=28
    DOTTYPE=29
    POLYLINE=30
    SPLINE=31
    POLYGON=32
    BLOB=33
    Model=34
    Enum=35
    ARRAY=36
    SCRIPT=37
    WITH=38
    AT=39
    PRINT=40
    REFRESH=41
    CLOSE=42
    MOUSE=43
    CLICK=44
    WAIT=45
    DEEPCOPY=46
    INPUT=47
    LOAD=48
    PLAY=49
    FOR=50
    WHILE=51
    REPEAT=52
    UNTIL=53
    IF=54
    ELSE=55
    IN=56
    DO=57
    AFTER=58
    MS=59
    S=60
    MOVE=61
    ROTATE=62
    BY=63
    TO=64
    ACTION=65
    ON=66
    PLUS=67
    MINUS=68
    MUL=69
    DIV=70
    GT=71
    LT=72
    GTE=73
    LTE=74
    EQ=75
    NEQ=76
    AND=77
    OR=78
    NOT=79
    BOOLEAN=80
    ID=81
    NAME=82
    INT=83
    FLOAT=84
    STRING=85
    LINE_COMMENT=86
    COMMENT=87
    WS=88
    ERROR=89

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(XAGLParser.EOF, 0)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XAGLParser.StatContext)
            else:
                return self.getTypedRuleContext(XAGLParser.StatContext,i)


        def getRuleIndex(self):
            return XAGLParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = XAGLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 6943432696957763592) != 0) or _la==81:
                self.state = 36
                self.stat()
                self.state = 41
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 42
            self.match(XAGLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instantiation(self):
            return self.getTypedRuleContext(XAGLParser.InstantiationContext,0)


        def longAssignment(self):
            return self.getTypedRuleContext(XAGLParser.LongAssignmentContext,0)


        def SEMI(self):
            return self.getToken(XAGLParser.SEMI, 0)

        def withStatement(self):
            return self.getTypedRuleContext(XAGLParser.WithStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(XAGLParser.ForStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(XAGLParser.WhileStatementContext,0)


        def repeatStatement(self):
            return self.getTypedRuleContext(XAGLParser.RepeatStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(XAGLParser.IfStatementContext,0)


        def command(self):
            return self.getTypedRuleContext(XAGLParser.CommandContext,0)


        def LBRACE(self):
            return self.getToken(XAGLParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(XAGLParser.RBRACE, 0)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XAGLParser.StatContext)
            else:
                return self.getTypedRuleContext(XAGLParser.StatContext,i)


        def getRuleIndex(self):
            return XAGLParser.RULE_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat" ):
                listener.enterStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat" ):
                listener.exitStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat" ):
                return visitor.visitStat(self)
            else:
                return visitor.visitChildren(self)




    def stat(self):

        localctx = XAGLParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stat)
        self._la = 0 # Token type
        try:
            self.state = 62
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 44
                self.instantiation()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 45
                self.longAssignment(None)
                self.state = 46
                self.match(XAGLParser.SEMI)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 48
                self.withStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 49
                self.forStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 50
                self.whileStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 51
                self.repeatStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 52
                self.ifStatement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 53
                self.command()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 54
                self.match(XAGLParser.LBRACE)
                self.state = 56 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 55
                    self.stat()
                    self.state = 58 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 6943432696957763592) != 0) or _la==81):
                        break

                self.state = 60
                self.match(XAGLParser.RBRACE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstantiationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(XAGLParser.ID, 0)

        def COLON(self):
            return self.getToken(XAGLParser.COLON, 0)

        def simpleStatement(self):
            return self.getTypedRuleContext(XAGLParser.SimpleStatementContext,0)


        def getRuleIndex(self):
            return XAGLParser.RULE_instantiation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstantiation" ):
                listener.enterInstantiation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstantiation" ):
                listener.exitInstantiation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstantiation" ):
                return visitor.visitInstantiation(self)
            else:
                return visitor.visitChildren(self)




    def instantiation(self):

        localctx = XAGLParser.InstantiationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_instantiation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(XAGLParser.ID)
            self.state = 65
            self.match(XAGLParser.COLON)
            self.state = 66
            self.simpleStatement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SimpleStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeID(self):
            return self.getTypedRuleContext(XAGLParser.TypeIDContext,0)


        def SEMI(self):
            return self.getToken(XAGLParser.SEMI, 0)

        def assignment(self):
            return self.getTypedRuleContext(XAGLParser.AssignmentContext,0)


        def getRuleIndex(self):
            return XAGLParser.RULE_simpleStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimpleStatement" ):
                listener.enterSimpleStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimpleStatement" ):
                listener.exitSimpleStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimpleStatement" ):
                return visitor.visitSimpleStatement(self)
            else:
                return visitor.visitChildren(self)




    def simpleStatement(self):

        localctx = XAGLParser.SimpleStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_simpleStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.typeID()
            self.state = 70
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 69
                self.assignment()


            self.state = 72
            self.match(XAGLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PropertiesAssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1, varName=None):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.varName = None
            self.varName = varName

        def LBRACE(self):
            return self.getToken(XAGLParser.LBRACE, 0)

        def longAssignment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XAGLParser.LongAssignmentContext)
            else:
                return self.getTypedRuleContext(XAGLParser.LongAssignmentContext,i)


        def RBRACE(self):
            return self.getToken(XAGLParser.RBRACE, 0)

        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(XAGLParser.SEMI)
            else:
                return self.getToken(XAGLParser.SEMI, i)

        def getRuleIndex(self):
            return XAGLParser.RULE_propertiesAssignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPropertiesAssignment" ):
                listener.enterPropertiesAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPropertiesAssignment" ):
                listener.exitPropertiesAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPropertiesAssignment" ):
                return visitor.visitPropertiesAssignment(self)
            else:
                return visitor.visitChildren(self)




    def propertiesAssignment(self, varName):

        localctx = XAGLParser.PropertiesAssignmentContext(self, self._ctx, self.state, varName)
        self.enterRule(localctx, 8, self.RULE_propertiesAssignment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(XAGLParser.LBRACE)
            self.state = 75
            self.longAssignment(localctx.varName)
            self.state = 80
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 76
                    self.match(XAGLParser.SEMI)
                    self.state = 77
                    self.longAssignment(localctx.varName) 
                self.state = 82
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 83
                self.match(XAGLParser.SEMI)


            self.state = 86
            self.match(XAGLParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LongAssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1, varName=None):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.varName = None
            self.varName = varName

        def identifier(self):
            return self.getTypedRuleContext(XAGLParser.IdentifierContext,0)


        def assignment(self):
            return self.getTypedRuleContext(XAGLParser.AssignmentContext,0)


        def getRuleIndex(self):
            return XAGLParser.RULE_longAssignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLongAssignment" ):
                listener.enterLongAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLongAssignment" ):
                listener.exitLongAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLongAssignment" ):
                return visitor.visitLongAssignment(self)
            else:
                return visitor.visitChildren(self)




    def longAssignment(self, varName):

        localctx = XAGLParser.LongAssignmentContext(self, self._ctx, self.state, varName)
        self.enterRule(localctx, 10, self.RULE_longAssignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.identifier()
            self.state = 89
            self.assignment()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQUAL(self):
            return self.getToken(XAGLParser.EQUAL, 0)

        def expression(self):
            return self.getTypedRuleContext(XAGLParser.ExpressionContext,0)


        def getRuleIndex(self):
            return XAGLParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = XAGLParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(XAGLParser.EQUAL)
            self.state = 92
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return XAGLParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ExprWaitContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a XAGLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WAIT(self):
            return self.getToken(XAGLParser.WAIT, 0)
        def MOUSE(self):
            return self.getToken(XAGLParser.MOUSE, 0)
        def CLICK(self):
            return self.getToken(XAGLParser.CLICK, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprWait" ):
                listener.enterExprWait(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprWait" ):
                listener.exitExprWait(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprWait" ):
                return visitor.visitExprWait(self)
            else:
                return visitor.visitChildren(self)


    class ExprStringContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a XAGLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(XAGLParser.STRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprString" ):
                listener.enterExprString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprString" ):
                listener.exitExprString(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprString" ):
                return visitor.visitExprString(self)
            else:
                return visitor.visitChildren(self)


    class ExprPointContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a XAGLParser.ExpressionContext
            super().__init__(parser)
            self.x = None # ExpressionContext
            self.y = None # ExpressionContext
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(XAGLParser.LPAREN, 0)
        def COMMA(self):
            return self.getToken(XAGLParser.COMMA, 0)
        def RPAREN(self):
            return self.getToken(XAGLParser.RPAREN, 0)
        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XAGLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(XAGLParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprPoint" ):
                listener.enterExprPoint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprPoint" ):
                listener.exitExprPoint(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprPoint" ):
                return visitor.visitExprPoint(self)
            else:
                return visitor.visitChildren(self)


    class ExprBooleanContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a XAGLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BOOLEAN(self):
            return self.getToken(XAGLParser.BOOLEAN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprBoolean" ):
                listener.enterExprBoolean(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprBoolean" ):
                listener.exitExprBoolean(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprBoolean" ):
                return visitor.visitExprBoolean(self)
            else:
                return visitor.visitChildren(self)


    class ExprParenthesisContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a XAGLParser.ExpressionContext
            super().__init__(parser)
            self.e = None # ExpressionContext
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(XAGLParser.LPAREN, 0)
        def RPAREN(self):
            return self.getToken(XAGLParser.RPAREN, 0)
        def expression(self):
            return self.getTypedRuleContext(XAGLParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprParenthesis" ):
                listener.enterExprParenthesis(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprParenthesis" ):
                listener.exitExprParenthesis(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprParenthesis" ):
                return visitor.visitExprParenthesis(self)
            else:
                return visitor.visitChildren(self)


    class ExprInputContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a XAGLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INPUT(self):
            return self.getToken(XAGLParser.INPUT, 0)
        def STRING(self):
            return self.getToken(XAGLParser.STRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprInput" ):
                listener.enterExprInput(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprInput" ):
                listener.exitExprInput(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprInput" ):
                return visitor.visitExprInput(self)
            else:
                return visitor.visitChildren(self)


    class ExprRelationalContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a XAGLParser.ExpressionContext
            super().__init__(parser)
            self.e1 = None # ExpressionContext
            self.op = None # Token
            self.e2 = None # ExpressionContext
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XAGLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(XAGLParser.ExpressionContext,i)

        def GT(self):
            return self.getToken(XAGLParser.GT, 0)
        def LT(self):
            return self.getToken(XAGLParser.LT, 0)
        def GTE(self):
            return self.getToken(XAGLParser.GTE, 0)
        def LTE(self):
            return self.getToken(XAGLParser.LTE, 0)
        def EQ(self):
            return self.getToken(XAGLParser.EQ, 0)
        def NEQ(self):
            return self.getToken(XAGLParser.NEQ, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprRelational" ):
                listener.enterExprRelational(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprRelational" ):
                listener.exitExprRelational(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprRelational" ):
                return visitor.visitExprRelational(self)
            else:
                return visitor.visitChildren(self)


    class ExprArrayContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a XAGLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LBRACK(self):
            return self.getToken(XAGLParser.LBRACK, 0)
        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XAGLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(XAGLParser.ExpressionContext,i)

        def RBRACK(self):
            return self.getToken(XAGLParser.RBRACK, 0)
        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(XAGLParser.COMMA)
            else:
                return self.getToken(XAGLParser.COMMA, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprArray" ):
                listener.enterExprArray(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprArray" ):
                listener.exitExprArray(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprArray" ):
                return visitor.visitExprArray(self)
            else:
                return visitor.visitChildren(self)


    class ExprAddSubMultDivContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a XAGLParser.ExpressionContext
            super().__init__(parser)
            self.e1 = None # ExpressionContext
            self.op = None # Token
            self.e2 = None # ExpressionContext
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XAGLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(XAGLParser.ExpressionContext,i)

        def MUL(self):
            return self.getToken(XAGLParser.MUL, 0)
        def DIV(self):
            return self.getToken(XAGLParser.DIV, 0)
        def PLUS(self):
            return self.getToken(XAGLParser.PLUS, 0)
        def MINUS(self):
            return self.getToken(XAGLParser.MINUS, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprAddSubMultDiv" ):
                listener.enterExprAddSubMultDiv(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprAddSubMultDiv" ):
                listener.exitExprAddSubMultDiv(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprAddSubMultDiv" ):
                return visitor.visitExprAddSubMultDiv(self)
            else:
                return visitor.visitChildren(self)


    class ExprVectorContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a XAGLParser.ExpressionContext
            super().__init__(parser)
            self.deg = None # ExpressionContext
            self.length = None # ExpressionContext
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(XAGLParser.LPAREN, 0)
        def COLON(self):
            return self.getToken(XAGLParser.COLON, 0)
        def RPAREN(self):
            return self.getToken(XAGLParser.RPAREN, 0)
        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XAGLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(XAGLParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprVector" ):
                listener.enterExprVector(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprVector" ):
                listener.exitExprVector(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprVector" ):
                return visitor.visitExprVector(self)
            else:
                return visitor.visitChildren(self)


    class ExprAndContext(ExpressionContext):
